--- a/style.css
+++ b/style.css
@@ -1,956 +1,154 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
-*{
-    font-family: "Cairo", sans-serif, arial;
-    box-sizing: border-box;
-    margin: 0;
-}
-.cabeca{
-    display: grid;
-    grid-template-columns: 2fr 1.5fr 2.8fr 2.9fr 1.7fr 1.05fr 1fr 2fr;
-    grid-template-rows: 50px;
-    background: #f5f5f5;
-    margin-bottom: 15px;
-}
-.cbc1{
-    grid-column: 1/1;
-    grid-row: 1/1;
-}
-.email{
-    grid-column: 2/2;
-    grid-row: 1/1;
-    display: flex;
-    flex-direction: row;
-   
+*{margin: 0;
+box-sizing: border-box;}
 
-}
-.email svg{
-   width: 14px;
-}
-.email p{
-    padding-top: 8px;
-    padding-left: 3px;
-}
+svg { height: 15px;
+fill: white;}
 
-.order99{
-    grid-column: 3/3;
-    grid-row: 1/1;
-    display: flex;
-    flex-direction: row;
-}
-.traco{
-   
-    padding-top:5px;
-    font-size: 20px;
-    opacity: 0.2;
-    font-weight: 300;
-}
-.free{
-padding-top: 10px;
-font-size: 14px;
-}
-.cbcvazio{
-    grid-column: 4/4;
-    grid-row: 1/1;
-}
-.redes{
-    grid-column: 5/5;
-    grid-row: 1/1;
-    display: flex;
-    flex-direction: row;
+header {background-color: black;
+height: 100vh;
+width: 13%;
+padding: 20px;
+color: white;
+position: sticky;
+top: 0;}
 
-}
-.redes svg{
-    margin-top: 17px;
-    margin-left: 20px;
-}
-.fb{
-width: 8px;
-height: 14px;
+main {width: 87%;
+background-image: url(img_9.jpg);
+background-size: 100%;
+background-attachment: fixed;}
 
-}
-.tw{
-width: 13px;
-height: 14px;
-}
-.in{
-width: 12px;
-height: 14px;
-}
-.pin{
-width: 10px;
-height: 14px;
-}
-
-.lingua{
-    grid-column: 6/6;
-    grid-row: 1/1;
-    display: flex;
-    flex-direction: row;
-
-}
-
-.drop-language{
-position: relative;
-padding-top: 10px;
-
-
-}
-.drop-list-language{
-position: absolute;
-background-color: #000000;
-width: 150%;
-opacity: 0;
-padding: 0;
-color: #ffffff;
-z-index: -99;
-}
-.drop-list-language li{
-    list-style: none;
-    padding-left: 15px;
-}
-.drop-language:hover .drop-list-language{
-    opacity: 2;
-    transition: 1s;
-    z-index: 99;
-}
-.login{
-    grid-column: 7/7;
-    grid-row: 1/1;  
-    display:flex ;
-    flex-direction: row;
-}
-.login svg{
-    width: 11px;
-    height: 14px;
-    margin-top: 17px;
-    margin-right: 6px;
-}
-.login a{
-    text-decoration: none; 
-    display: flex;
-    justify-content: center;
-}
-.login p{
-    padding-top: 9px;
-}
-.cbc2{
-    grid-column: 8/8;
-    grid-row: 1/1;
-}
-
-.container{
-    display: grid;
-    grid-template-columns: 1fr 1.1fr 2.3fr 1.2fr 1fr;
-    grid-template-rows: 80px  100px;
-}
-.item-1{
-    grid-column: 1/1;
-    grid-row: 1/2;
-}
-.item-2{
-    grid-column: 2/2;
-    grid-row: 1/1;
-}
-.item-3{
-    grid-column: 3/3;
-    grid-row: 1/1;
-    display: flex;
-    flex-direction: row;
-}
-.item-3>ul{
-    display: flex;
-    flex-direction: row;
-    padding-top: 12px;
-    
-}
-.item-3 ul li{
-    margin-right: 50px;
-    list-style: none;
-}
-.item-3 :hover{
-    color: #7fad39;
-    transition: 0.5s;
-}
-.item-3 a{
-    text-decoration: none ;
-    color: #000000;
-  font-size: 16px;
-  font-weight: 700;
-  letter-spacing: 2px;
-}
-.drop-menu{
-    position: relative;
-    
-}
-.drop-list{
-position: absolute;
-font-size: 14px;
- color: #ffffff;
-    font-weight: 400;
-    letter-spacing: 0;
-    display: flex;
-    flex-direction: column;
-    width: 340%;
-   padding: 0;
-    background-color: #000000;
-    opacity: 0;
-    z-index: -99;
-
-}
-.drop-list li a{
-    padding-left: 10px;
-    padding-top: 1px;
-    font-size: 14px;
- color: #ffffff;
- font-weight: 400;
-
-}
-.drop-menu:hover .drop-list{
-    z-index: 99;
-opacity: 2;
-transition: 1s;
-}
-.drop-list a:hover{
-    color: #7fad39;
-}
-.item-4{
-    grid-column: 4/4;
-    grid-row: 1/1;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.item-4 span{
-    color: #252525;
-    font-weight: 700;
-  
-}
-.itempreco {
-   padding-bottom: 25px;
-   padding-left: 10px;
-   font-size: 14px;
-}
-
-.iconescbc svg{
-    width: 20px;
-    height: 20px;
-    margin-right: 8px;
-    margin-bottom: 22px;
-    
-}
-.coracao{
-    margin-left: 108px;
-}
-.item-5{
-    grid-column: 5/5;
-    grid-row: 1/2;
-}
-.drop-menu-2{
-    grid-column: 2/2;
-    grid-row: 2/2;
-    height: 50px;
-    position: relative;
-    background-color: #7fad39;
-    
-    
-}
-.titulo-drop{
-    font-size: 18px;
-    font-weight: 700;
-    color: #ffffff;
-   
-    padding-left: 75px;
-   
-}
-.drop-checkbox{
-   position: absolute;
-   width:100%;
-   height: 80px;
-   z-index: 99;
-   left: 0;
-   opacity: 0;
-  
-  
-}
-#drop-list-2 { opacity: 0;
-padding-top: 15px;
-list-style: none;
-line-height: 38px;
- border: 1px solid #ccc;
- 
-}
-
-.drop-checkbox:checked~#drop-list-2{opacity: 1; }
-
-.search-container {
-    grid-column: 3/4;
-    grid-row: 2/2;
-    display: flex;
-    width: 98%;
-    height: 50px;
-    margin: 0 auto;
-    padding-left: 5%;
-    
-}
-.allcategoriesbox{
-    border: 1px solid #ccc;
-}
-.allcategoriesbox h5{
-    font-size: 16px;
-    color: #1c1c1c;
-    font-weight: 700;
-    padding-top: 5px;
-    padding-left: 3px;
-}
-.allcategoriesbox svg{
-    width: 10px;
-    margin-left: 6px;
-    margin-right: 2px;
-    fill: #6f6f6f;
-}
-.search-input {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    
-    font-size: 16px;
-}
-.search-button {
-    padding: 10px 20px;
-    background-color: #7fad39;;
-    border: none;
-    font-weight: 800;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-}
-.search-button:hover {
-    background-color: #7fad39;;
-}
-.contact-container{
-    grid-column: 4/4;
-    grid-row: 2/2;
-    display: flex;
-    flex-direction: row;
-    padding-left: 25%;
-}
-.phone{
-    fill: #7fad39;
-    width: 15px;
- margin-left: 18px;
-}
-.phone-div{
-    background-color: #ccc;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
- 
-}.phone-number{
-    display: flex;
-    flex-direction: column;
-    padding-left: 18px;
-}
-.phone-number h5{
-    color: #1c1c1c;
-    font-weight: 700;
-    font-size: 18px;
-}
-.phone-number span{
-    font-size: 14px;
-    color: #6f6f6f;
-}
-.body-container{
-    display: grid;
-    grid-template-columns:1fr 1.1fr 2.3fr 1.2fr 1fr ;
-    grid-template-rows: 431px 275px 250px 550px 300px 500px 750px ;
-}
-.empty1{
-    grid-column: 1/1;
-    grid-row: 1/10;
-}
-.empty2{
-    grid-column:5/5 ;
-    grid-row: 1/10 ;
-}
-.under-dropbox{
-    grid-column: 2/2;
-    grid-row: 1/1;
-}
-.banner{
-    grid-column: 3/5;
-    grid-row: 1/1;
-    background-image: url(banner.jpg.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    padding: 10%;
-}
-.banner span{
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 4px;
-    color: #7fad39;
-}
-.banner h2{
-    font-size: 46px;
-    color: #252525;
-    line-height: 52px;
-    font-weight: 900;
-    margin: 10px 0;
-    line-height: 45px;
-}
-.banner p{
-    font-size: 16px;
-    font-family: "Cairo", sans-serif;
-    color: #6f6f6f;
-    font-weight: 400;
-    line-height: 26px;
-    margin: 0 0 15px 0;
-}
-.shopnow-button{
-    padding: 10px 20px;
-    background-color: #7fad39;;
-    border: none;
-    font-weight: 800;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-}
-.carousel{
-    grid-column: 2/5;
-    grid-row: 2/2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.suco{
-    background-image: url(cat-4.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.ceral{
-    background-image: url(cat-2.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.fruta{
-    background-image: url(cat-1.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.shop-bag{
-    background-image: url(cat-3.jpg);
-    background-image: url;
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-
-
-.featuredtext{
-   
-  padding-top: 100px;
-    grid-column: 2/5;
-    grid-row: 3/3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.featuredtext h2{
-    
- 
-    font-size: 36px;
-    color: #1c1c1c;
-    font-weight: 700;
-}
-.featuredmenu{
-    
-    display:flex;
-    justify-content: center;
-}
-.featuredmenu-list{
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    text-decoration: none;
-
-}
-.featuredmenu-list li a{
-    font-size: 18px;
-    color: #1c1c1c;
-    display: inline-block;
-    margin-right: 25px;
-    margin-top: 20px;
-    text-decoration: none;
-
-}
-.featured-items{
-grid-column: 2/5;
-grid-row: 4/4;
+#welcome {height: 100vh;
 display: flex;
 flex-direction: column;
-margin-top: 40px;
-}
-.itens-row1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 50%;
-}
-.itens-row2{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 50px;
-    height: 50%;
-}
-.carne{
-    background-image: url(feature-1.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.manga{
-background-image: url(feature-7.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.uva{
-    background-image: url(feature-5.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.goiaba{
-    background-image: url(feature-3.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.banana{
-    background-image: url(feature-2.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.burguer{
-    background-image: url(feature-6.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.melancia{
-    background-image: url(feature-4.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.maca{
-    background-image: url(feature-8.jpg);
-    width: 23%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.banner-container{
-    grid-column: 2/5;
-    grid-row: 5/5;
-    display: flex;
-    flex-direction: row;
-    margin-top: 100px;
-    justify-content: space-between;
-    
-}
-.banner1{
-    width: 48%;
-    
-}
-.banner2{
-    width: 48%;
-    
+justify-content: center;
+align-items: center;
+backdrop-filter: brightness(50%);
+color: white;
+font-family:Arial, sans-serif;
+font: 32px Oswald;}
+
+#welcome p {width: 60%;}
+#welcome a {display: inline-block;
+width: 164px;
+height: 53px;
+background-color: #df0e62;
+color: white;
+text-decoration: none;
+border-radius: 30px;
+text-align: center;
+line-height: 53px;}
+
+body {display: flex;}
+
+#photos {display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+background-color: black;
+row-gap: 10px;}
+
+.imagens {width: 33%;
+height: 33vh;
+overflow: hidden;
+position: relative;
 }
 
+.imagens img {width: 100%;
+height: 33vh;
+object-fit: cover;
+transition: 1s;
+position: relative;}
+header a {color: white;
+ text-decoration: none;}
 
+ header ul{list-style: none;
+ padding: 0;
+ margin-top: 40px;}
 
+ header li {margin-bottom: 15px;}
 
-.painelInfo{
-    grid-column: 2/5;
-    grid-row: 6/6;
+ header svg { fill: white;
+ height: 15px;
+ margin-right: 15px;}
 
-    margin-top: 160px;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: 5vw 17vw;
-}
+.imagens:hover>img{filter: brightness(50%);}
+.imagens svg {position: absolute;
+left: 50%;
+top: 55%;
+transform: translate(-50%, -50%);
+opacity: 0;
+transition: 1s;}
 
-.painelInfoCab{
-    display: grid;
-    grid-template-columns: 3fr 3fr 3fr;    
-    grid-row: 1;
-    margin-bottom: 45px;
-}
+.imagens:hover>svg{opacity: 1;}
 
-.painelInfoCab1{
-    grid-column: 1;
-    grid-row: 1;
+#test{background-color: black;
+color: white;}
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-}
+#center{display: flex;
+justify-content: center;}
 
-.painelInfoCab2{
-    grid-column: 2;
+#test2{background-color: #1a1a1a;
+color: white;}
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-}
+#test2 p {margin-bottom: 16px;
+padding-right: 30%;}
 
-.painelInfoCab3{
-    grid-column: 3;
+#test2 h3{font: 64px Oswald;}
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-}
+#test2 h2{font: 32px Oswald;}
 
-.painelInfoCabButao{
-    height: 30px;
-    width: 30px;
-    background: #F3F6FA;
-    border: 1px solid #e6e6e6;
-    font-size: 14px;
-    color: #636363;
-    margin-right: 10px;
-    line-height: 30px;
-    text-align: center;
-}
+#test2 h4{font: 28px Oswald;}
 
-.painelInfoCabButao svg{
-    width: 5px;
-    height: 14px;
-}
+#test h3{font: 64px Oswald;}
 
-.painelInfoCabP{
-    font-weight: 900;
-    color: #1c1c1c;
-   
-    font-size: 24px;
-}
+#test h2{font: 32px Oswald;}
 
-.painelInfoProducts{
-    display: grid;
-    grid-template-columns: 3fr 3fr 3fr;    
-    grid-row: 2;
-}
+.space{padding: 100px;}
 
-.painelInfoProductsCard{
-    display: flex;
-    align-items: center;
-    margin-bottom: 16px;
-    padding-bottom: 20px;
-}
+#test img{height: 200px;}
 
-.painelInfoProductsCardImagem{
-    margin-right: 20px;
-}
+#test2 img{height: 250px;}
 
-.painelInfoProductsCard1{
-    grid-column: 1;
+.listas { display: flex;
+margin-bottom: 16px;}
 
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 20px;
-}
-
-.painelInfoProductsCard2{
-    grid-column: 2;
-
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 20px;
-}
-
-.painelInfoProductsCard3{
-    grid-column: 3;
-
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 20px;
-}
-
-.painelInfoProductsCardP p{
-    font-size: 16px;
-    color: #000!important;
-}
-
-.fromBlog{
-    grid-column: 2/5;
-    grid-row: 7/7;
-
-    margin-top: 200px;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: 5vw 17vw;
-    padding-bottom: 200px;
-}
-
-.fromBlogTitle h2{
-    grid-row: 1;
-    font-size: 36px;
-    font-weight: 750;
-    display: flex;
-    justify-content: center;
-}
-
-.fromBlogPag{
-    display: grid;
-    grid-template-columns: 3fr 3fr 3fr;
-
-    margin-top: 30px;
-    grid-row: 2;
-    width: 100%;
-    height: 100%;
-}
-
-.blogdiv svg{
-    height: 15px;
-}
-
-.blogdiv p{
-    font-size: 16px;
-    margin-bottom: 25px;
-}
-
-.final{background-color: #F3F6FA;
-display: flex;
-width: 100%;
-height: 300px;}
-
-.lista1{
-height: 100px;
-margin-left: 70px;
-list-style: none;}
-
-.lista2{
-height: 100px;
-margin-left: 100px;
-list-style: none;}
-
-.lista3{
-height: 100px;
-margin-left: 100px;
-list-style: none;}
-
-.lista4{
-height: 100px;
-margin-left: 100px;
-list-style: none;    
-}
-
-.footer-container{
-    display: grid;
-    grid-template-columns:1fr 1.1fr 2.3fr 1.2fr 1fr ;
-    grid-template-rows: 50px 260px 100px;
-    margin-top: 50px;
-    background: #F3F6FA;
-}
-.footer-empty1{
-    grid-column: 1/1;
-    grid-row: 1/4;
-}
-.footer-empty2{
-    grid-column: 5/5;
-    grid-row: 1/4;
-}
-.footer-logo{
-
-    grid-column: 2/2;
-    grid-row: 2/2;
-    display: flex;
-    flex-direction: column;
-    padding-left: 20px;
-    
-
-}
-.footer-logo img{
-    margin-bottom: 15px;
-}
-.footer-logo-list{
-    list-style: none;
-padding: 0;
-line-height: 36px;
-    
- 
-}
-.Useful-links{
-    grid-column: 3/3;
-    grid-row: 2/2;
-    display: flex;
-    flex-direction: column; 
-    
-    padding-left: 100px;
-}
-.Useful-links h6{
-    color: #1c1c1c;
-    font-weight: 700;
-    margin-bottom: 10px;
-    font-size: 16px;
-    padding-left: 38px;
-}
-.list-container{
-    display: flex;
-    flex-direction: row;
-}
-.left-list{
-    list-style: none;
-    color: #1c1c1c;
-    font-size: 14px;
-    line-height: 32px;
- padding-right: 20px;
-}
-.right-list{
-    list-style: none;
-  
-    color: #1c1c1c;
-    font-size: 14px;
-    line-height: 32px;
-}
-a{
-    color: black;
-    text-decoration: none;
-}
-.footer-mail{
-    grid-column: 4/4;
-    grid-row: 2/2;
-    
-}
-.footer-mail h6{
-    color: #1c1c1c;
-    font-weight: 700;
-    margin-bottom: 10px;
-    font-size: 16px;
-}
-.footer-mail p{
-    font-size: 14px;
-    color: #1c1c1c;
-    margin-bottom: 30px;
-    font-weight: 400;
-    line-height: 26px;
-
-}
-.sub-button-footer{
-    padding: 10px 20px;
-    background-color: #7fad39;;
-    border: none;
-    font-weight: 800;
+#test3{background-color: black;
     color: white;
-    font-size: 16px;
-    cursor: pointer;
+padding-left: 20%;
 }
-.sub-input{
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-}
-.botoes {
-    margin-top: 30px;
-    display: flex;
-  
-  }
 
-  .botao {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border:  0.5px solid #ccc;
-    margin: 0 10px;
-    border: none;
-    cursor: pointer;
-    background-color: #ffffff;
-    transition: background-color 0.3s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .fb-button{
-    width: 10px;
-    fill: #404040;
-  }
-  .insta-button{
-    width: 14px;
-    fill: #404040;
-  }
-  .tw-button{
-    width: 14px;
-    fill: #404040;
-  }
-  .pin-button{
-    width: 14px;
-    fill: #404040;
-  }
+#test3 h3{font: 64px Oswald;}
 
-  .botao:hover {
-    background-color: #7fad39;
-  }
-  .botao:hover svg{
-    fill: #f5f5f5;
-  }
-.Copyright-container{
-    grid-column: 2/4;
-    grid-row: 3/3;
-    display: flex;
-    align-items: center;
-}
-.Copyright-container p{
-    color: #6f6f6f;
-    font-size: 16px;
-    font-weight: 400;
-}
-.Copyright-container svg{
-    width: 16px;
-    fill:#6f6f6f ;
+#test3 img{height: 200px;}
 
-}
-.Copyright-container a{
-    color: blue;
-}
-.Copyright-container a:hover{
-    color: #b2b2b2;
-}
-.payment-metods{
-    grid-column: 4/4;
-    grid-row: 3/3;
-    display: flex;
-    align-items: center;
-}
+#test4{background-color: #1a1a1a;
+color: white;}
+
+label {margin-bottom: 16px;}
+
+input{ background-color: transparent;
+border: none;
+border-bottom: solid 1px gray;
+outline: none;
+color: white;}
+
+.row{display: flex;}
+
+.form-conrol{border: none;
+    border-bottom: 2px solid gray;
+    border-radius: 0;
+    background: none;
+    color: #fff;
+    padding-left: 0;
+    padding-right: 0;}
+
+#test4 a{display: inline-block;
+    width: 164px;
+    height: 53px;
+    background-color: #df0e62;
+    color: white;
+    text-decoration: none;
+    border-radius: 30px;
+    text-align: center;
+    line-height: 53px;}
+
+section h2 {font: 64px Oswald;}
